Fixed aspect fill image scaling. (#194)
* Fixed screen syncing, image aspect view.

* Fixed image scaling for related items and record media view.

--- a/WindowExplorer/Sources/Controllers/MediaControllers/ImageViewController/Image.storyboard
+++ b/WindowExplorer/Sources/Controllers/MediaControllers/ImageViewController/Image.storyboard
@@ -99,6 +99,7 @@
                             <constraint firstItem="529-pd-R3M" firstAttribute="top" secondItem="sSn-s5-6HM" secondAttribute="top" id="WnV-SU-5jv"/>
                             <constraint firstItem="WTp-wA-9SL" firstAttribute="leading" secondItem="sSn-s5-6HM" secondAttribute="leading" constant="8" id="dsS-3c-P65"/>
                             <constraint firstAttribute="trailing" secondItem="529-pd-R3M" secondAttribute="trailing" id="qKh-TI-HmK"/>
+                            <constraint firstItem="WTp-wA-9SL" firstAttribute="top" secondItem="529-pd-R3M" secondAttribute="bottom" constant="8" id="yIW-4a-jsl"/>
                         </constraints>
                     </view>
                     <connections>
