Fix panning on seek bar in player, fixed video button hiding when fin… (#198)
* Fix panning on seek bar in player, fixed video button hiding when finished, fixed seek position of knob.

* Added small image for finished player state.

* Removed unnecessary check.

* Only allow player control panning within the horizontal frame of the seek bar.

--- a/WindowExplorer/Sources/Controllers/MediaControllers/PlayerViewController/Views/PlayerControl.xib
+++ b/WindowExplorer/Sources/Controllers/MediaControllers/PlayerViewController/Views/PlayerControl.xib
@@ -33,7 +33,7 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8jO-Ld-nn0">
+                <slider horizontalHuggingPriority="210" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="8jO-Ld-nn0">
                     <rect key="frame" x="102" y="10" width="428" height="19"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="15" id="sRP-hR-Myv"/>
